fix horizontal scroll

--- a/custom_css/style.css
+++ b/custom_css/style.css
@@ -68,6 +68,26 @@ body {
 .cover-container {
   max-width: 72em;
 }
+.lead {
+  font-family: 'Zilla Slab', serif;
+
+}
+
+.masthead {
+  margin-bottom: 2rem;
+}
+
+.masthead-brand {
+  margin-bottom: 0;
+}
+
+.nav-masthead .nav-link {
+  padding: 0.25rem 0;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.5);
+  background-color: transparent;
+  border-bottom: 0.25rem solid transparent;
+}
 
 .cover {
   padding: 0 1.5rem;
